# BlackBox

./: .env  .gitignore  DEPLOY_ON_DEVICE_RU.md  LINUX_AUTOSTART.md  README.md  alembic.ini  blackbox.db  bootstrap.sh  deif_modbus_console.py  deif_modbus_csv_logger.py  example_usage.py  modbus_reader.py  pyproject.toml  requirements.txt
blackbox/: README_RU.md  __init__.py  analog_inputs.py  config.py  data_logger.py  data_writer.py  deif_gempac.py  discrete_inputs.py  hourly_param_csv.py  modbus_reader.py
deploy/systemd/: blackbox.service
instructions/: emergency-rules.md  settings-json.md
legase/: modbus_opt_v3.py  modbus_opt_v4.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0b94798d81c5_add_ended_at_for_emergency_events.py  0f7a24e972ce_add_name_and_soft_delete_for_emergency_.py  1d48886d4130_auto_migration.py  2c9a7b1f3d55_merge_analogs_discretes_into_samples.py  6c80f66a1324_.py  777e8d705140_strict_migrations_mode.py  9d2a1c4f7a01_add_alarms_raspberry.py  a1f4d2e9b7c3_alarm_state_and_event_logs.py  c4c8f9fbb3a1_add_videos_table.py  (+1 more)
modbus_acquire/: __init__.py  deif.py  instrument.py  serial_cli.py
scripts/linux/: create_env.sh  (+4 more)
settings/: settings.json
src/: database.py  seed.py  web_app.py
tests/: test_config_and_conditions.py  test_controller_time_parsing.py  test_data_logger_and_logging.py  test_data_tables.py  test_data_writer_and_backup.py  test_deif_gempac.py  test_discrete_and_analog.py  test_emergency_rule_validation.py  test_expr_round_available.py  test_gpio_hold_engine.py  test_hourly_param_csv.py  test_modbus_port_io.py  test_modbus_reader.py  test_snapshot_bbx1.py  test_system_video_and_maintenance.py
(+59 files in other folders)
