[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "blackbox"
version = "1.0.0"
description = "Регистрация данных и опрос Modbus (blackbox + modbus_acquire)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "fastapi>=0.116.1",
    "flask-migrate>=4.1.0",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "minimalmodbus>=2.1.1,<3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.35.0",
    "pydantic>=2.12.5",
    "simpleeval>=1.0.3",
    "openpyxl>=3.1.5",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["blackbox", "modbus_acquire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
source = ["blackbox", "modbus_acquire"]
omit = ["*/tests/*"]
